*Empty MediaWiki Message*

--- a/Олимпий_модмаш.mw
+++ b/Олимпий_модмаш.mw
@@ -14,11 +14,11 @@
 
 == Олимпий модмашым угыч пöртылмаш ==
 [[Файл:Baron Pierre de Coubertin.jpg|thumb|200px|Барон [[Пьер де Кубертен]]]]
-Олимпий шонымаш акрет таҥасымашым чарыме деч вара йöршынлан йомын огыл. Мутлан, [[Аҥглий]]ыште [[XVII курым]] жапыште «олимпий» таҥасымаш да ÿчашымаш-влак  ик гана веле огыл лийыныт.  Варарак тыгай таҥасымаш-влак [[Пырансе]] да [[Греций]]ыште эртеныт. Туге гынат, нуным {{comment|кундем сынан|регионального масштаба}} изи сомылкалан веле шотлаш лиеш. Кызытсе Олимпий модмаш-влакын эн тÿҥ ончычсо «Олимпий»-влак лийыныт. Нуно [[1859]]-[[1888]] ийлаште эреак эртаралт шогеныт. Олимпий модмаш-влакым уэш пöртылмаш нерген шонымашым [[Панайотис Суцос]] [[почеламутчо]] темлен, а илышыш тудым [[мер]] пашаеҥ [[Евангелис Заппас]] шыҥдарен.
+Олимпий шонымаш акрет таҥасымашым чарыме деч вара йöршынлан йомын огыл. Мутлан, [[Англий]]ыште [[XVII курым]] жапыште «олимпий» таҥасымаш да ÿчашымаш-влак  ик гана веле огыл лийыныт.  Варарак тыгай таҥасымаш-влак [[Франций]] да [[Греций]]ыште эртеныт. Туге гынат, нуным {{comment|кундем сынан|регионального масштаба}} изи сомылкалан веле шотлаш лиеш. Кызытсе Олимпий модмаш-влакын эн тÿҥ ончычсо «Олимпий»-влак лийыныт. Нуно [[1859]]-[[1888]] ийлаште эреак эртаралт шогеныт. Олимпий модмаш-влакым уэш пöртылмаш нерген шонымашым [[Панайотис Суцос]] [[почеламутчо]] темлен, а илышыш тудым [[мер]] пашаеҥ [[Евангелис Заппас]] шыҥдарен.
 
 [[1766]] ийыште археологический кычалмашым эртарыме деч вара Олимпий Олаште спорт да храм полат-влакым верештыныт. [[1875]] ийыште археологический шымлымаш да кычалмаш [[немыч]]-влакын вуйлатымышт почеш шуйнен. Ты пагытыште [[Европо|Европышто]] акрет жапым романтико-идеалистический семын онченыт. Олимпийысе шонымашым да тÿвырам угыч нöлтал колтымо нерген ой Европо мучко моткоч вашке шарлен. Француз барон Пьер де Кубертен тунам каласен: «[[Немыч Эл]] акрет Олимпий деч мо кодмым кычал муын. Молан [[Франций]] тошто куатшым пöртылтен ок керт?»
 
-Кубертенын шонымыж почеш, пырансуз салтак-влак [[1870]]-[[1871]] ийласе Франко-прусский сарыште начар тазалыкыштлан кöра сеҥалтыныт. Тыгай сÿретым тудо пырансуз-влакын кап-кыл тазалыкыштым шуарыме дене вашталташ тöчен. Тидын годым калык эгоизмым кораҥдаш тыршен да тыныслык ден калык кокласе келшымаш верч шоген. Тÿнямбалсе самырыктукым шке вийжым кредалмаш пасушто огыл, а спорт таҥасымашлаште тергышаш. Олимпий модмашым угыч нöлталмаш тудын шонымыж почеш ты экшык-влакым тöрлашлан эн сай йöн лийын.
+Кубертенын шонымыж почеш, француз салтак-влак [[1870]]-[[1871]] ийласе Франко-прусский сарыште начар тазалыкыштлан кöра сеҥалтыныт. Тыгай сÿретым тудо француз-влакын кап-кыл тазалыкыштым шуарыме дене вашталташ тöчен. Тидын годым калык эгоизмым кораҥдаш тыршен да тыныслык ден калык кокласе келшымаш верч шоген. Тÿнямбалсе самырыктукым шке вийжым кредалмаш пасушто огыл, а спорт таҥасымашлаште тергышаш. Олимпий модмашым угыч нöлталмаш тудын шонымыж почеш ты экшык-влакым тöрлашлан эн сай йöн лийын.
 
 [[1894]] ий [[Пеледыш]] тылзын 16-23 кечылаштыже [[Сорбонн]] олаште ([[Париж]] университет) эртаралтше конгрессыште Кубертен шке шонымашым да {{comment|ыҥым|идейым}} тÿрлö калык ончыко луктын. Конгрессын пытартыш кечынже тыгай ойыш шуыныт: кызытсе пагытын икымше Олимпий модмаш [[1896]] ийыште ты модмашым шочыктышо элыште – [[Греций]]ыште, [[Афин]]ыште эртышаш. Тунам Интеркалыкын Олимпийский Комитетлан (ИОК) негызым пыштыме да модмаш-влакым вÿдымылан нуно вуйын шогеныт. Комитетын I-ше президентше [[грек]] [[Деметриус Викелас]] лийын. Ты пашам тудо 1-ше Олимпий модмаш чарнымеш, [[1896]] марте, вÿден. Барон Пьер де Кубертен генеральный секретарь сомылым шуктен.
 [[Файл:Athens 1896 report cover.jpg|thumb|left|200px|Икымше Олимпий модмаш-влакын плакатше]]
@@ -112,7 +112,7 @@
 ! спорт тӱрлык-влак
 |-
 ![[Теле Олимпий модмаш - Шамони 1924|I]]
-|[[1924]] || [[Шамони]] || [[Пырансе]]
+|[[1924]] || [[Шамони]] || [[Франций]]
 |align="center"|16
 |align="center"|280
 |align="center"|14
