--- a/Сеул.mw
+++ b/Сеул.mw
@@ -46,7 +46,7 @@
 '''Сеул''' — [[ола]], [[Кечывалвел Корей]]ын рӱдолаже, ты кундемыште эн кугу олалан шотлалтеш. Калыкчот - 10 [[амион]] еҥ.
 
 == Лӱм ==
-Корейыште илыше-влак рӱдолаштын лӱмжым [соуль] семын маныт. Соуль мут тоштокорейысе йылме гыч толын, ''соболь'' але ''сораболь'' мут дене рӱдӧ олам лӱмденыт. Тудо жапыште тиде мут дене Кёндж олам лӱмденыт.  Латин транскрипцийыште тиде мутым йоҥылыш {{comment|[[мутлончо]]|слог}}-влаклан шеледеныт, сандене европысо, руш йылмылаште "сеул" мутым йоҥылыш лудыт. Seoul —  Seo-ul семын лудман ыле, а лудыныт [[Пырансуз йылме|пырансузла]] - Se-oul.
+Корейыште илыше-влак рӱдолаштын лӱмжым [соуль] семын маныт. Соуль мут тоштокорейысе йылме гыч толын, ''соболь'' але ''сораболь'' мут дене рӱдӧ олам лӱмденыт. Тудо жапыште тиде мут дене Кёндж олам лӱмденыт.  Латин транскрипцийыште тиде мутым йоҥылыш {{comment|[[мутлончо]]|слог}}-влаклан шеледеныт, сандене европысо, руш йылмылаште "сеул" мутым йоҥылыш лудыт. Seoul —  Seo-ul семын лудман ыле, а лудыныт [[Француз йылме|французла]] - Se-oul.
 
 == Эртымгорно ==
 [[Файл:Hauptstrasse und Palasttor in Seoul.jpg|thumb|250px|Сеулысо урем, Кёнбоккун полат тыште верланен. XIX курым]]
