--- a/Иван_Смирнов.mw
+++ b/Иван_Смирнов.mw
@@ -10,8 +10,8 @@
 Первой большой работой И.Смирнова в театре стала роль Мики в трагикомедии М.Рыбакова «Эргымлан кузык» («Приданое для сына», 1988). Актер создал убедительный образ человека, оторвавшегося от своих корней и не понимающего всей трагичности этого разрыва. Помимо этого актер исполнял в спектакле несущие огромную идейно-смысловую нагрузку зонги. В трагифарсе «Савик» (1989) по одноименному роману Н.Игнатьева исполненные им зонги стали выражением идейного пафоса спектакля, придали ему философскую глубину. Народная песня послужила ключом к раскрытию образов Тойблата (С.Чавайн «Акпатыр», 1987), любовь к музыке способствовала более полному раскрытию образа композитора-самородка Стапана Микале в драме М.Рыбакова «Морко сем» («Моркинские напевы», 1995). 
 И.Смирнов — актер разноплановый. В его творческом арсенале ряд мастерски исполненных ролей классического репертуара: Скапен (Мольер «Чоя Скапен» / Плутни Скапена, 1995), Нароков, адвокат Маргаритов и купец Неуеденов (А.Островский «Сонарзе ден суксо-влак» / Таланты и поклонники, 1990; «Вараш кодшо йоратымаш» / Поздняя любовь, 2000 и «Мом кычалат, тудымак муат» / За чем пойдешь, то и найдешь, 2000), Наполеон (Б.Шоу «Поръен пиал» / Избранник судьбы, 2000), старик (А.Камю «Йонылыш» / Недоразумение, 1995), Кушак (А.Вампилов «Сонар содом» / Утиная охота, 2002) и др. Яркой вехой в творческой биографии актера стала роль Подколесина в спектакле режиссера В.Пектеева «Каче пазар» (Н.Гоголь «Женитьба», 1994). Эта работа получила резонанс в центральной прессе. 
 Актеру присуще обостренное чувство жанра и стиля, он находит особые краски для создания образов в новаторских для марийской сцены спектаклях, например, Икте и Иксан в пьесах-притчах Ю.Байгузы «Порсын лунгалтыш» («Шелковые качели», 1999) и «Поргем умбалне ужара» («Заря над пропастью», 1997), а также рассказчик от Калевалы в постановке финского эпоса «Калевала» (1997) и другие. 
-Одной из граней дарования И.Смирнова является ярко выраженный комизм. Органично, со знанием природы народного юмора сыграны им Ияиге и Йогор в пьесах М.Рыбакова «Онарын кердыже» («Меч Онара», 1989), и «Турлемудыр» («Кружевница», 1991), Селифон (А.Волков «Оръен мелна» / Свадебные блины, 1991), Вачук (Л.Яндаков «Пусаксолаште томаша» / Переполох в Пусаксоле, 1994), Карасий и Таргылтыш иге (В.Пектеев, Ю.Байгуза «Окса тул» / Блеск монет, 1994), Шумелев (Н.Арбан «Кенеж йуд» / Летняя ночь, 2000), Чузай (Л.Яндаков «Йоратымаш? Йоратымаш! Йоратымаш...» / Любовь? Любовь! Любовь..., 2002) и др. Не менее ярко и убедительно созданы актером образы в переводных комедиях: Сильва (А.Вампилов «Кугэрге» / Старший сын, 1990), Микеле и Эмилио (Э. де Филиппе и др. «Калтатше ярас, калтак, але Страсти по-итальянски, 1996), Ярасим (Г.Каюм «Туларте мыйым, шеремет» / Брак по объявлению, 1998), Метрий (Ш.Башбеков «Кум кечылан у кува» / Железная женщина, 2003) и другие. 
+Одной из граней дарования И.Смирнова является ярко выраженный комизм. Органично, со знанием природы народного юмора сыграны им Ияиге и Йогор в пьесах М.Рыбакова «Онарын кердыже» («Меч Онара», 1989), и «Турлемудыр» («Кружевница», 1991), Селифон (А.Волков «Оръен мелна» / Свадебные блины, 1991), Вачук (Л.Яндаков «Пусаксолаште томаша» / Переполох в Пусаксоле, 1994), Карасий и Таргылтыш иге (В.Пектеев, Ю.Байгуза «Окса тул» / Блеск монет, 1994), Шумелев (Н.Арбан «Кеҥеж йуд» / Летняя ночь, 2000), Чузай (Л.Яндаков «Йоратымаш? Йоратымаш! Йоратымаш...» / Любовь? Любовь! Любовь..., 2002) и др. Не менее ярко и убедительно созданы актером образы в переводных комедиях: Сильва (А.Вампилов «Кугэрге» / Старший сын, 1990), Микеле и Эмилио (Э. де Филиппе и др. «Калтатше ярас, калтак, але Страсти по-итальянски, 1996), Ярасим (Г.Каюм «Туларте мыйым, шеремет» / Брак по объявлению, 1998), Метрий (Ш.Башбеков «Кум кечылан у кува» / Железная женщина, 2003) и другие. 
 Глубоким драматизмом, проникновением в психологию персонажа отличаются сыгранные И.Смирновым роли в произведениях национальной классики, например, объездчик Епсей (С.Чавайн «Мукш отар» / Пасека, 1988), Тихон и Осып в пьесах М.Шкетана «Сардай» (1993) и «Ачийжат-авийжат!..» («Эх, родители!..», 1998), а также комиссар Ванька в драме А.Пудина «Эренгер» (1998), созданной по мотивам романа классика. В музыкальной комедии С.Николаева «Салика», которая трижды была поставлена за время работы актера в театре, он исполнил роли Эчука (1988), Акпая Полатова (1999) и Ози Кузи (2004). 
 В 1994 г. И.Смирнов участвовал в I Всероссийском конкурсе им. А.Миронова «Поют артисты драматического театра» (г. Нижний Новгород). 
 В 1995 г. И.Смирнову было присвоено почетное звание «Заслуженный артист Республики Марий Эл», а в 1999 г. — «Народный артист Республики Марий Эл». 
-В 1997 г. И.Смирнов стал первым лауреатом республиканской театральной премии им. Йывана Кырли в номинации «Лучшая мужская роль» за создание образа поэта и актера Йывана Кырли в драме А.Пудина «Ой, луй модеш...» («Ой, куница играет...», пост. 1996). Эта работа актера также была высоко оценена жюри III Международного фестиваля театров финно-угорских народов (Йошкар-Ола, 1997). В 2001 и 2004 гг. актер стал лауреатом премии им. Й.Кырли в номинации «Лучшая мужская роль второго плана» — за исполнение роли председателя колхоза Шумелева в мюзикле Н.Арбана «Кенеж йуд» («Летняя ночь», пост. 2000) и купца Восмибратова в комедии А.Островского «Чодыра» («Лес», пост. 2003). Работа И.Смирнова освещалась на страницах центральных изданий. В настоящее время он один из самых репертуарных актеров театра.
+В 1997 г. И.Смирнов стал первым лауреатом республиканской театральной премии им. Йывана Кырли в номинации «Лучшая мужская роль» за создание образа поэта и актера Йывана Кырли в драме А.Пудина «Ой, луй модеш...» («Ой, куница играет...», пост. 1996). Эта работа актера также была высоко оценена жюри III Международного фестиваля театров финно-угорских народов (Йошкар-Ола, 1997). В 2001 и 2004 гг. актер стал лауреатом премии им. Й.Кырли в номинации «Лучшая мужская роль второго плана» — за исполнение роли председателя колхоза Шумелева в мюзикле Н.Арбана «Кеҥеж йуд» («Летняя ночь», пост. 2000) и купца Восмибратова в комедии А.Островского «Чодыра» («Лес», пост. 2003). Работа И.Смирнова освещалась на страницах центральных изданий. В настоящее время он один из самых репертуарных актеров театра.
