*Empty MediaWiki Message*

--- a/Чапкӱ.mw
+++ b/Чапкӱ.mw
@@ -1,4 +1,4 @@
-'''Чапкӱ''' але '''шарныктыш''' — [[Айдеме|айдемылан]], [[увер]]лан але ала мо весылан сооружений. [[Ола]]ште да [[ял]]ыште мотор койышлан тудым шындат.
+'''Чапкӱ''' але '''шарныктыш''' — [[Айдеме|айдемылан]], [[увер]]лан але ала-мо весылан сооружений. [[Ола]]ште да [[ял]]ыште мотор койышлан тудым шындат.
 
 ==Ойыртем==
 Чапкӱ — кӱ але мемориал оҥа гай ыштат. Да шарныктышым уже ала-могай сооружений гай.
