*Empty MediaWiki Message*

--- a/Автоспорт.mw
+++ b/Автоспорт.mw
@@ -6,7 +6,7 @@
 
 Но чын автомашина дене ӱчашен кудалыштмаш [[1895]] ийыште эртен, тыге южо-влак шонат. 1200 меҥгеаш Париж-Бордо-Париж корнышто таҥасымаш лийын. Таҥасымашым Францийысе автоклуб эртарен. Тиде клуб тачат уло. Трассым эрташлан 100 шагатым пуеныт. Но Левассор лӱман сеҥыше «Панар-Левассор» машина дене 48 шагат 48 минутышто эртен. Мо оҥайже: тиде корныштак икымше гана пневмошина дене пайдаланеныт. У йӧнын авторжо Андре Мишлен шкеак пневмошинан машина дене кудылын. Корно мучко полышкалышыжым шогалтылын, но чӱчкыдын шинным вашталтымашлан кӧра чот вараш кодын. 
 
-Тудо жапыштак, тыгайрак сынан ӱчашен кудалыштмаш-влак [[Италий]]ыште, [[АУШ|Америкыште]], [[Кугу Британий]]ыште эртеныт. Пытартыш таҥасымаш чокым эртен. Молан манаш гын, [[1896]] ийыште «йошкар флаг нерген тӧртыкым» кораҥденыт. Тиде тӧртык почеш, кажне таҥасыше машинаште кок айдеме шинчышаш ыле, шагатыште куд километр писылык дене гын кудалын кертыныт, а машина ончылно, кидыште йошкар флагым кучен, айдеме ошкылшаш ыле. Тиде тӧртыкым кораҥдымеке, Лондон-Брайтон корнышто  эрыкан кудалыштмашым эртареныт. Сеҥыше-влак, пӧлек-влак деч посна.
+Тудо жапыштак, тыгайрак сынан ӱчашен кудалыштмаш-влак [[Италий]]ыште, [[АУШ|Америкыште]], [[Кугу Британий]]ыште эртеныт. Пытартыш таҥасымаш чокым эртен. Молан манаш гын, [[1896]] ийыште «йошкар флаг нерген тӧртыкым» кораҥденыт. Тиде тӧртык почеш, кажне таҥасыше машинаште кок айдеме шинчышаш ыле, шагатыште куд меҥге писылык дене гын кудалын кертыныт, а машина ончылно, кидыште йошкар флагым кучен, айдеме ошкылшаш ыле. Тиде тӧртыкым кораҥдымеке, Лондон-Брайтон корнышто  эрыкан кудалыштмашым эртареныт. Сеҥыше-влак, пӧлек-влак деч посна.
 
 ==Таҥасымаш-влакын тӱрлыкышт==
 ===Оҥго дене кудалыштмаш (кольцевые автогонки)===
