--- a/Аламнер.mw
+++ b/Аламнер.mw
@@ -5,7 +5,7 @@
 XI- XV курымлаште Аламнер курык ӱмбалне илем-влак лийыныт, а вара марий карман [[Салым-Ола]] лийын, кудыжо руш онлык влак дене ужалыме - налме вашкылым пеҥгыдемдаш полшен.
 Аламнер курыкын историйже {{comment|[[Шундыр-Ола]]|Мариинский Посад}} дене кылдалтын . Шундыр-Ола Юл эҥерын пурла серыштыже верланен. Чебоксар да [[Озаҥ]] ола-влак коклаште. Ожно тиде илем марий он Аказын онлыкышкыже пурен. Ожнысек тиде марий ял лийын, вара руш-шамычат илаш тӱҥалыныт.  {{comment|Курымсерыш|Летопись}} материалым ончал лекмеке пален налаш лиеш: XVI курым кыдалне тышке Иван Грозныйын еҥже-влак илаш толаш тӱҥалыныт . Нуно шке ял шотан илемым чоҥеныт да рушла Сундырь манын лӱмденыт. 
 Шундыр-Ола нерген  икымше гана 1620 ийыште палемден коденыт. Шундыр-Ола Шундыр эҥерлан кӧра тыгай лӱмым налын.
-Чуваший республикын  кумдыкыштыжо 2 кресаньык сар гӱжлен.  Емельян Пугачев да Степан Разинын вуйлатымыж почеш. Степан Разинын сарзе вийже  Аламнер курыкышто верланыше ял шотан илем марте шуын огыл, а теве Пугачевын сарзе вийже Нерядово ял воктене 1774 ийыште  лийын. Тиде ял Юлын пурла серешыже верланен,  Шундыр-Ола деч 3-5 километр тораште . 
+Чуваший республикын  кумдыкыштыжо 2 кресаньык сар гӱжлен.  Емельян Пугачев да Степан Разинын вуйлатымыж почеш. Степан Разинын сарзе вийже  Аламнер курыкышто верланыше ял шотан илем марте шуын огыл, а теве Пугачевын сарзе вийже Нерядово ял воктене 1774 ийыште  лийын. Тиде ял Юлын пурла серешыже верланен,  Шундыр-Ола деч 3-5 меҥге тораште . 
 
 == Кызытсе жап ==
 Алмнер курык кокла курым тӱвырам почын ончыктышо фестиваль-влак дене чапланен.  Арам огыл фестивальын организаторжо-влак тидым верым ойырен налыныт. Лачак тыште XV курым годсо карманын  пырдыжше-влак кодыныт. Фестиваль кокла курым пагытын шӱлышым пуртен шога: вургем сарӱзгар - чыла коклакурым пагыт дене шула. Марий эл республикын тӱвыра да сымыкытыш министерствын кышкарже почеш лишыл жапыште Аламнер курыкышто тоштер-заповедникым почаш шонымаш уло. 
